--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.6.1",
+    "eslint-plugin-mocha": "^4.11.0",
     "husky": "^0.14.3",
     "mocha": "^3.5.0",
     "nsp": "^2.8.0"
