--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "body-parser": "^1.18.0",
     "express": "^4.15.4",
+    "express-winston": "^2.4.0",
     "moment": "^2.18.1",
-    "ramda": "^0.24.1"
+    "ramda": "^0.24.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -33,6 +35,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "husky": "^0.14.3",
     "mocha": "^3.5.0",
-    "nsp": "^2.8.0"
+    "nsp": "^2.8.0",
+    "supertest": "^3.0.0"
   }
 }
