--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.0",
     "express": "^4.15.4",
     "express-winston": "^2.4.0",
+    "helmet": "^3.8.1",
     "moment": "^2.18.1",
     "ramda": "^0.24.1",
     "winston": "^2.3.1"
