--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "env-test": "^1.0.0",
     "eslint": "^4.6.1",
     "eslint-plugin-mocha": "^4.11.0",
     "husky": "^0.14.3",
